fix: reduced the z-index for model popup appears design

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -14,7 +14,7 @@
     header{
         position: sticky;
         top: 0px;
-        z-index: 9999;
+        z-index: 990;
     }
     .about-content{
         padding: 24px 40px 24px 0px;
